<resources>
    <string name="app_name">Calculator</string>
    <string name="txt_equal">=</string>
    <string name="txt_general_hint_enter">Enter</string>
    <string name="txt_zero">0</string>
    <string name="txt_one">1</string>
    <string name="txt_two">2</string>
    <string name="txt_three">3</string>
    <string name="txt_four">4</string>
    <string name="txt_five">5</string>
    <string name="txt_six">6</string>
    <string name="txt_seven">7</string>
    <string name="txt_eight">8</string>
    <string name="txt_nine">9</string>
    <string name="txt_plus">+</string>
    <string name="txt_minus">-</string>
    <string name="txt_dot">.</string>
    <string name="txt_multiply">x</string>
    <string name="txt_division">/</string>
    <string name="txt_clear">C</string>
    <string name="title_activity_xyi">XYIActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="txt_save">Save</string>


</resources>
