<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearRelativeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_main_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""
            android:autofillHints="">
        </EditText>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_main_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_seven"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_seven"
                android:text="@string/txt_eight"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_eight"
                android:text="@string/txt_nine"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_nine"
                android:text="@string/txt_clear"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_main_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_four"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_four"
                android:text="@string/txt_five"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_five"
                android:text="@string/txt_six"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_six"
                android:text="@string/txt_division"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_main_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_one"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_one"
                android:text="@string/txt_two"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_two"
                android:text="@string/txt_three"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_three"
                android:text="@string/txt_multiply"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_main_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_dot"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_dot"
                android:text="@string/txt_zero"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_zero"
                android:text="@string/txt_plus"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_main_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_main_plus"
                android:text="@string/txt_minus"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_main_equal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange"
            android:text="@string/txt_equal"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>